# rapidproto

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  architecture.md  check.sh
.github/workflows/: bench.yml  ci.yml  release.yml
cmake/: embed_runtime.cmake  rapidproto-generate.cmake  rapidprotoConfig.cmake.in  version.hpp.in
examples/consumer/: CMakeLists.txt  lean.modes  lean_main.cpp  main.cpp
examples/consumer/proto/: message.proto  types.proto
include/rapidproto/: arena_runtime.hpp  ast.hpp  combinators.hpp  debug_runtime.hpp  dump_runtime.hpp  features.hpp  interpret.hpp  lexer.hpp  parser.hpp  range.hpp  resolve.hpp  resolver.hpp  result.hpp  runtime.hpp  scalar.hpp  source.hpp  source_id.hpp  wellknown.hpp
src/: features.cpp  header_self_contained.cpp  interpret.cpp  lexer.cpp  main.cpp  parser.cpp  resolve.cpp  resolver.cpp  source.cpp  wellknown_generated.cpp
src/arenagen/: generator.cpp  layout.cpp  modes.cpp
src/codegen/: naming.cpp
src/debuggen/: generator.cpp
src/dumpgen/: generator.cpp
src/rapidprotoc/: main.cpp
src/streamgen/: generator.cpp
tests/: .clang-tidy  arena_layout_dump.hpp  arena_modes_link.sh  arena_modes_profile.hpp  arenagen_compile_fail.sh  ast_dump.hpp  bench.py  bench_arena.cpp  bench_harness.hpp  bench_offset_repr.cpp  bench_stream_isolated.cpp  bench_streamgen.cpp  bench_two_tier.hpp  bench_varint.hpp  regen_arenagen_goldens.sh  regen_debuggen_goldens.sh  regen_dumpgen_goldens.sh  regen_goldens.sh  streamgen_compile_bench.sh  streamgen_compile_fail.sh  temp_dir.hpp  test_arena_decode.cpp  test_arena_layout.cpp  test_arena_modes.cpp  test_arena_runtime.cpp  test_arenagen.cpp  test_ast.cpp  test_cli_driver.cpp  test_combinators.cpp  test_common_header.cpp  test_debuggen.cpp  test_decode.cpp  test_dumpgen.cpp  test_features.cpp  test_golden.cpp  test_integration.cpp  test_interpret.cpp  test_lexer.cpp  test_packed_kernels.cpp  test_parser_enums.cpp  (+17 more)
tests/arena_layout_golden/: arena_layout.txt  arena_modes.txt  editions2023.txt  packed.txt  proto2.txt  proto3.txt  xref.txt
tests/arenagen_golden/: arena_layout.rp.common.hpp  arena_layout.rp.hpp  arena_manyreq.rp.common.hpp  arena_manyreq.rp.hpp  arena_modes.rp.common.hpp  arena_modes.rp.hpp  arena_naming.rp.common.hpp  arena_naming.rp.hpp  arena_unknown.rp.common.hpp  arena_unknown.rp.hpp  deep.rp.hpp  dep.rp.common.hpp  dep.rp.hpp  editions2023.rp.common.hpp  editions2023.rp.hpp  editions2024.rp.common.hpp  editions2024.rp.hpp  forward.rp.common.hpp  forward.rp.hpp  main.rp.common.hpp  main.rp.hpp  nopkg.rp.common.hpp  nopkg.rp.hpp  proto2.rp.common.hpp  proto2.rp.hpp  proto3.rp.common.hpp  proto3.rp.hpp  pub.rp.common.hpp  pub.rp.hpp  samepkg_a.rp.common.hpp  samepkg_a.rp.hpp  samepkg_b.rp.common.hpp  samepkg_b.rp.hpp  weakdep.rp.common.hpp  weakdep.rp.hpp  weakmain.rp.common.hpp  weakmain.rp.hpp  wire_all.rp.common.hpp  wire_all.rp.hpp  xpkg.rp.hpp  (+2 more)
tests/bench/: bench.proto
tests/common_golden/: dep.rp.common.hpp  editions2023.rp.common.hpp  main.rp.common.hpp  naming.rp.common.hpp  proto2.rp.common.hpp  proto3.rp.common.hpp
tests/corpus/: arena_layout.proto  arena_manyreq.proto  arena_modes.modes  arena_modes.proto  arena_naming.proto  arena_unknown.proto  editions2023.proto  editions2024.proto  naming.proto  options.proto  packed.proto  proto2.proto  proto3.proto  usewkt.proto  xref.proto
tests/debuggen_golden/: arena_layout.rp.debug.hpp  arena_layout.rp.hpp  arena_manyreq.rp.debug.hpp  arena_manyreq.rp.hpp  arena_modes.rp.debug.hpp  arena_naming.rp.debug.hpp  arena_naming.rp.hpp  arena_unknown.rp.debug.hpp  dep.rp.debug.hpp  editions2023.rp.common.hpp  editions2023.rp.debug.hpp  editions2024.rp.debug.hpp  editions2024.rp.hpp  forward.rp.debug.hpp  main.rp.debug.hpp  proto2.rp.debug.hpp  proto3.rp.debug.hpp  pub.rp.debug.hpp  samepkg_a.rp.debug.hpp  samepkg_b.rp.debug.hpp  weakdep.rp.debug.hpp  weakmain.rp.debug.hpp  wire_all.rp.debug.hpp  xref.rp.debug.hpp
tests/dumpgen_golden/: arena_layout.rp.common.hpp  arena_layout.rp.dump.hpp  arena_manyreq.rp.common.hpp  arena_manyreq.rp.dump.hpp  arena_manyreq.rp.hpp  arena_modes.rp.dump.hpp  arena_modes.rp.hpp  arena_naming.rp.common.hpp  arena_naming.rp.dump.hpp  arena_naming.rp.hpp  arena_unknown.rp.common.hpp  arena_unknown.rp.dump.hpp  arena_unknown.rp.hpp  dep.rp.common.hpp  dep.rp.dump.hpp  dep.rp.hpp  editions2023.rp.common.hpp  editions2023.rp.dump.hpp  editions2023.rp.hpp  editions2024.rp.common.hpp  editions2024.rp.dump.hpp  editions2024.rp.hpp  forward.rp.common.hpp  forward.rp.dump.hpp  forward.rp.hpp  main.rp.common.hpp  main.rp.dump.hpp  main.rp.hpp  proto2.rp.dump.hpp  proto2.rp.hpp  proto3.rp.dump.hpp  proto3.rp.hpp  pub.rp.common.hpp  pub.rp.dump.hpp  pub.rp.hpp  samepkg_a.rp.common.hpp  samepkg_a.rp.dump.hpp  samepkg_a.rp.hpp  samepkg_b.rp.common.hpp  samepkg_b.rp.dump.hpp  (+10 more)
tests/fuzz/: fuzz_arena.cpp  fuzz_stream.cpp  fuzz_wire.cpp
tests/golden/: editions2023.txt  editions2024.txt  imports.txt  options.txt  proto2.txt  proto3.txt
tests/streamgen_golden/: deep.rp.common.hpp  deep.rp.stream.hpp  dep.rp.common.hpp  dep.rp.stream.hpp  editions2023.rp.common.hpp  editions2023.rp.stream.hpp  editions2024.rp.common.hpp  editions2024.rp.stream.hpp  forward.rp.common.hpp  forward.rp.stream.hpp  main.rp.common.hpp  main.rp.stream.hpp  naming.rp.common.hpp  naming.rp.stream.hpp  nopkg.rp.stream.hpp  packed.rp.common.hpp  packed.rp.stream.hpp  proto2.rp.common.hpp  proto2.rp.stream.hpp  proto3.rp.common.hpp  proto3.rp.stream.hpp  pub.rp.common.hpp  pub.rp.stream.hpp  usewkt.rp.common.hpp  usewkt.rp.stream.hpp  weakdep.rp.common.hpp  weakdep.rp.stream.hpp  weakmain.rp.common.hpp  weakmain.rp.stream.hpp  wire_all.rp.common.hpp  wire_all.rp.stream.hpp  xpkg.rp.common.hpp  xpkg.rp.stream.hpp  xref.rp.common.hpp  xref.rp.stream.hpp
tests/wire_fixtures/: all_wire.txtpb  container.txtpb  generate.py  msg.txtpb  scalars.txtpb  wire_all.proto
wellknown/: embed_wellknown.py
(+64 files in other folders)
