cmake_minimum_required(VERSION 3.16)
project(rapidproto VERSION 0.2.4 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(GNUInstallDirs)

# Top-level-only defaults: a consumer (add_subdirectory / FetchContent) gets just the library +
# CLIs — no tests, no -Werror (a new compiler's warnings must never break a downstream build), and
# no install rules injected into ITS `cmake --install` — unless it opts in explicitly.
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  set(_rp_top_level ON)
else()
  set(_rp_top_level OFF)
endif()
option(RAPIDPROTO_BUILD_TESTS "Build the test suite" ${_rp_top_level})
option(RAPIDPROTO_WERROR "Treat warnings as errors for our own targets" ${_rp_top_level})
option(RAPIDPROTO_INSTALL "Register install/export rules" ${_rp_top_level})
# AddressSanitizer + UndefinedBehaviorSanitizer on our OWN targets only (never vendored Catch2, which
# links no strict target). For an untrusted-input decoder this catches runtime UB the static checks
# can't; -fno-sanitize-recover makes a finding abort so it surfaces in the test run / gate.
option(RAPIDPROTO_SANITIZE "Build our targets with AddressSanitizer + UBSan" OFF)
# Source-based coverage instrumentation on our OWN targets (clang). Run the tests, then llvm-cov over
# src/ + include/ to find untested paths (especially the parser error paths).
option(RAPIDPROTO_COVERAGE "Build our targets with clang source-based coverage" OFF)

# ---------------------------------------------------------------------------
# Strict warnings, applied ONLY to our own targets (never to vendored code).
# Link this INTERFACE target into anything we author.
# ---------------------------------------------------------------------------
add_library(rapidproto_strict INTERFACE)

set(_rp_warnings_common
  -Wall -Wextra -Wpedantic
  -Wshadow
  -Wconversion -Wsign-conversion
  -Wcast-qual -Wold-style-cast
  -Wdouble-promotion -Wfloat-equal
  -Wformat=2 -Wundef
  -Wimplicit-fallthrough
  -Wextra-semi
  -Wnon-virtual-dtor -Woverloaded-virtual)
# -Wnull-dereference is deliberately omitted: it needs the optimizer to fire (so it is silent at the
# -O0 Debug gate) and at -O3 gcc 13 AND 14 false-positive on correct, pointer-free code (e.g. the
# arena bool-wrapper accessor), which would block a -Werror Release build. Real null-deref coverage
# comes from the deep tier's ASan/UBSan; clang has no such false positive.
set(_rp_warnings_gcc
  -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wuseless-cast)

target_compile_options(rapidproto_strict INTERFACE
  $<$<CXX_COMPILER_ID:GNU>:${_rp_warnings_common};${_rp_warnings_gcc}>
  $<$<CXX_COMPILER_ID:Clang,AppleClang>:${_rp_warnings_common}>
  $<$<BOOL:${RAPIDPROTO_WERROR}>:-Werror>
  $<$<BOOL:${RAPIDPROTO_SANITIZE}>:-fsanitize=address,undefined;-fno-sanitize-recover=all;-fno-omit-frame-pointer;-g>
  $<$<BOOL:${RAPIDPROTO_COVERAGE}>:-fprofile-instr-generate;-fcoverage-mapping>)
target_link_options(rapidproto_strict INTERFACE
  $<$<BOOL:${RAPIDPROTO_SANITIZE}>:-fsanitize=address,undefined>
  $<$<BOOL:${RAPIDPROTO_COVERAGE}>:-fprofile-instr-generate>)

# The version header (rapidproto/version.hpp): generated so the CLIs' --version and the emitters'
# generated-file banner can never drift from project(VERSION). Build-tree only; the installed
# runtime headers don't use it. CURRENT_BINARY_DIR, not BINARY_DIR: under add_subdirectory /
# FetchContent the latter is the CONSUMER'S build dir (pollution, and a colliding
# generated/include there would silently win).
configure_file(cmake/version.hpp.in
  "${CMAKE_CURRENT_BINARY_DIR}/generated/include/rapidproto/version.hpp" @ONLY)

# Public headers (Range, Result, combinators, lexer, ...).
add_library(rapidproto INTERFACE)
target_include_directories(rapidproto INTERFACE
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  "${CMAKE_CURRENT_BINARY_DIR}/generated/include")
target_compile_features(rapidproto INTERFACE cxx_std_17)

# Installable public runtime: only the two std-library-only headers generated code includes
# (runtime.hpp + arena_runtime.hpp). The CLIs also drop a copy beside their output, so this target is
# for consumers who prefer the installed form; the install interface exposes nothing else from include/.
add_library(rapidproto_runtime INTERFACE)
target_include_directories(rapidproto_runtime INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(rapidproto_runtime INTERFACE cxx_std_17)
add_library(rapidproto::runtime ALIAS rapidproto_runtime)

# Compiled library (lexer, parser, resolver, feature/type/option semantic passes, and the
# generated well-known sources).
# src/wellknown_generated.cpp is generated by wellknown/embed_wellknown.py (checked in).
add_library(rapidproto_lib STATIC
  src/lexer.cpp
  src/interpret.cpp
  src/parser.cpp
  src/features.cpp
  src/resolve.cpp
  src/resolver.cpp
  src/source.cpp
  src/wellknown_generated.cpp)
target_link_libraries(rapidproto_lib PUBLIC rapidproto PRIVATE rapidproto_strict)

# CLI driver (thin; kept out of clang-tidy/format like a normal main, but built strict).
add_executable(rapidproto_cli src/main.cpp)
target_link_libraries(rapidproto_cli PRIVATE rapidproto_lib rapidproto_strict)

# Generator-agnostic codegen layer (rapidproto::codegen): the C++ naming/type tables, the Printer,
# the shared scalar-wire facts (codegen/wire.hpp), and the embedded runtime.hpp text. Both code
# generators build on this; neither depends on the other.
# runtime_embedded.cpp carries the text of include/rapidproto/runtime.hpp (so a CLI can drop it next
# to its output). It is GENERATED at build time from runtime.hpp by cmake/embed_runtime.cmake --
# regenerated automatically whenever runtime.hpp changes, so there is nothing to keep in sync by hand.
set(RUNTIME_EMBEDDED_CPP "${CMAKE_CURRENT_BINARY_DIR}/generated/runtime_embedded.cpp")
add_custom_command(
  OUTPUT "${RUNTIME_EMBEDDED_CPP}"
  COMMAND ${CMAKE_COMMAND}
    -DRUNTIME_HPP=${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/runtime.hpp
    -DOUTPUT_CPP=${RUNTIME_EMBEDDED_CPP}
    -DEMBED_NS=rapidproto::codegen
    -DEMBED_FUNC=runtime_header
    -DEMBED_DECL=rapidproto/codegen/runtime_embedded.hpp
    -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/embed_runtime.cmake
  DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/runtime.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/embed_runtime.cmake
  COMMENT "Embedding runtime.hpp -> runtime_embedded.cpp"
  VERBATIM)
# The embedded runtime is one raw string literal exceeding the 65536-char minimum the standard requires
# (both compilers accept it; clang's pedantic -Woverlength-strings would flag it under -Werror). Suppress
# it for this generated, internal-only TU.
set_source_files_properties(${RUNTIME_EMBEDDED_CPP} PROPERTIES COMPILE_OPTIONS "-Wno-overlength-strings")
add_library(rapidproto_codegen_lib STATIC
  src/codegen/naming.cpp
  ${RUNTIME_EMBEDDED_CPP})
target_link_libraries(rapidproto_codegen_lib PUBLIC rapidproto PRIVATE rapidproto_strict)

# Streaming-decoder code generator library: the emitter, built on the shared codegen layer. Generated
# code depends only on the header-only runtime, never on this generator. The CLI that drives it is the
# unified `rapidprotoc` (below), shared with arenagen.
add_library(rapidproto_streamgen_lib STATIC
  src/streamgen/generator.cpp)
target_link_libraries(rapidproto_streamgen_lib PUBLIC rapidproto_lib rapidproto_codegen_lib
                                               PRIVATE rapidproto_strict)

# Arena object-tree decoder code generator library: a separate library built on the schema library,
# mirroring the streamgen split. It comprises the layout planner (the analysis "brain") and the
# struct/parse emitter. Generated code depends only on the header-only arena runtime, never on this
# generator.
# arena_runtime.hpp is embedded at build time (reusing embed_runtime.cmake with arenagen's namespace/
# function) so the CLI can drop a self-contained copy beside its output, exactly as the codegen layer
# does for runtime.hpp. The CLI drops BOTH headers (arena_runtime.hpp #includes runtime.hpp).
set(ARENA_RUNTIME_EMBEDDED_CPP "${CMAKE_CURRENT_BINARY_DIR}/generated/arena_runtime_embedded.cpp")
add_custom_command(
  OUTPUT "${ARENA_RUNTIME_EMBEDDED_CPP}"
  COMMAND ${CMAKE_COMMAND}
    -DRUNTIME_HPP=${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/arena_runtime.hpp
    -DOUTPUT_CPP=${ARENA_RUNTIME_EMBEDDED_CPP}
    -DEMBED_NS=rapidproto::arenagen
    -DEMBED_FUNC=arena_runtime_header
    -DEMBED_DECL=rapidproto/arenagen/runtime_embedded.hpp
    -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/embed_runtime.cmake
  DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/arena_runtime.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/embed_runtime.cmake
  COMMENT "Embedding arena_runtime.hpp -> arena_runtime_embedded.cpp"
  VERBATIM)
set_source_files_properties(${ARENA_RUNTIME_EMBEDDED_CPP}
  PROPERTIES COMPILE_OPTIONS "-Wno-overlength-strings")  # same over-length embed literal as above
add_library(rapidproto_arenagen_lib STATIC
  src/arenagen/layout.cpp
  src/arenagen/modes.cpp
  src/arenagen/generator.cpp
  src/debuggen/generator.cpp
  ${ARENA_RUNTIME_EMBEDDED_CPP})
target_link_libraries(rapidproto_arenagen_lib PUBLIC rapidproto_lib rapidproto_codegen_lib
                                              PRIVATE rapidproto_strict)

# The unified code-generator CLI: one tool emitting the arena and/or streaming decoder (+ the shared
# common header) from a single parse. Built on BOTH emitter libraries; replaces the old per-model CLIs.
add_executable(rapidprotoc src/rapidprotoc/main.cpp)
target_link_libraries(rapidprotoc
  PRIVATE rapidproto_arenagen_lib rapidproto_streamgen_lib rapidproto_strict)

# Stable, source-agnostic handle: find_package(rapidproto) exposes the same name, so a downstream
# rapidproto_generate() works whether the CLI is installed or built in-tree.
add_executable(rapidproto::rapidprotoc ALIAS rapidprotoc)

# The rapidproto_generate() helper -- available in-tree here, and to installed consumers via the Config
# (which include()s the installed copy). Defines the function downstream targets call to run codegen.
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/rapidproto-generate.cmake)

# ---------------------------------------------------------------------------
# Install + package config: `find_package(rapidproto)` provides the imported CLI
# (rapidproto::rapidprotoc) and the runtime headers (rapidproto::runtime).
# Gated by RAPIDPROTO_INSTALL (default: top-level only), so an add_subdirectory /
# FetchContent consumer's own `cmake --install` doesn't receive our files.
# ---------------------------------------------------------------------------
if(RAPIDPROTO_INSTALL)
  include(CMakePackageConfigHelpers)
  set(RAPIDPROTO_INSTALL_CMAKEDIR ${CMAKE_INSTALL_LIBDIR}/cmake/rapidproto)

  # Export under a short, namespaced name (rapidproto::rapidprotoc, not ::rapidprotoc) so the installed
  # imported target matches the in-tree ALIAS -- one rapidproto_generate() works either way.
  set_target_properties(rapidprotoc PROPERTIES EXPORT_NAME rapidprotoc)
  set_target_properties(rapidproto_runtime PROPERTIES EXPORT_NAME runtime)

  install(TARGETS rapidprotoc rapidproto_runtime
    EXPORT rapidprotoTargets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/runtime.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rapidproto/arena_runtime.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rapidproto)
  install(EXPORT rapidprotoTargets
    NAMESPACE rapidproto::
    DESTINATION ${RAPIDPROTO_INSTALL_CMAKEDIR})

  configure_package_config_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/rapidprotoConfig.cmake.in
    ${CMAKE_CURRENT_BINARY_DIR}/rapidprotoConfig.cmake
    INSTALL_DESTINATION ${RAPIDPROTO_INSTALL_CMAKEDIR})
  write_basic_package_version_file(
    ${CMAKE_CURRENT_BINARY_DIR}/rapidprotoConfigVersion.cmake
    # Pre-1.0: each 0.x is its own compatibility bucket (the SemVer-0 convention, where the minor is the
    # breaking axis) -- SameMajorVersion would treat all 0.x as interchangeable. Revisit at 1.0.
    COMPATIBILITY SameMinorVersion
    # The runtime is header-only and rapidprotoc is a HOST tool, so the version check must not
    # reject a consumer with a different target pointer size (the documented cross-compile flow:
    # a 32-bit target build importing a 64-bit host install).
    ARCH_INDEPENDENT)
  install(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/rapidprotoConfig.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/rapidprotoConfigVersion.cmake
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/rapidproto-generate.cmake
    DESTINATION ${RAPIDPROTO_INSTALL_CMAKEDIR})
  # Apache-2.0 redistribution: NOTICE (and the third-party attributions) must travel with the
  # installed prefix, not just the source tree.
  install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE
    ${CMAKE_CURRENT_SOURCE_DIR}/NOTICE
    ${CMAKE_CURRENT_SOURCE_DIR}/THIRD_PARTY_NOTICES.md
    DESTINATION ${CMAKE_INSTALL_DOCDIR})
endif()

if(RAPIDPROTO_BUILD_TESTS)
  enable_testing()

  # Vendored Catch2 v3 (amalgamated) — no network needed. Built as its own lib
  # with default (non-strict) flags so Catch2's internals don't trip -Werror, and
  # its headers are exposed as SYSTEM includes so they don't either. The
  # amalgamated .cpp also supplies main().
  add_library(catch2_vendored STATIC tests/catch_amalgamated.cpp)
  target_include_directories(catch2_vendored SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/tests)
  target_compile_features(catch2_vendored PUBLIC cxx_std_17)

  add_executable(rapidproto_tests
    src/header_self_contained.cpp  # headers compile standalone under strict flags
    tests/test_range.cpp
    tests/test_result.cpp
    tests/test_source.cpp
    tests/test_combinators.cpp
    tests/test_lexer.cpp
    tests/test_ast.cpp
    tests/test_parser_options.cpp
    tests/test_parser_enums.cpp
    tests/test_parser_fields.cpp
    tests/test_parser_messages.cpp
    tests/test_parser_errors.cpp
    tests/test_wellknown.cpp
    tests/test_resolver.cpp
    tests/test_features.cpp
    tests/test_resolve_fqn.cpp
    tests/test_resolve_types.cpp
    tests/test_interpret.cpp
    tests/test_integration.cpp
    tests/test_pipeline.cpp
    tests/test_golden.cpp
    tests/test_wire.cpp
    tests/test_wire_golden.cpp
    tests/test_arena_runtime.cpp
    tests/test_arena_layout.cpp
    tests/test_arena_modes.cpp
    tests/test_arenagen.cpp
    tests/test_arena_decode.cpp
    tests/test_decode.cpp
    tests/test_packed_kernels.cpp
    tests/test_printer.cpp
    tests/test_streamgen.cpp
    tests/test_cli_driver.cpp
    tests/test_common_header.cpp
  )
  target_link_libraries(rapidproto_tests PRIVATE rapidproto rapidproto_lib rapidproto_streamgen_lib
                                                 rapidproto_arenagen_lib rapidproto_strict
                                                 catch2_vendored)
  # Absolute paths to the golden-test corpus and expected dumps, so the test finds them
  # regardless of the working directory it is launched from.
  target_compile_definitions(rapidproto_tests PRIVATE
    RAPIDPROTO_CORPUS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/corpus"
    RAPIDPROTO_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/golden"
    RAPIDPROTO_WIRE_FIXTURE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/wire_fixtures"
    RAPIDPROTO_WIRE_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/wire_golden"
    RAPIDPROTO_STREAMGEN_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/streamgen_golden"
    RAPIDPROTO_ARENA_LAYOUT_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/arena_layout_golden"
    RAPIDPROTO_ARENAGEN_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/arenagen_golden"
    RAPIDPROTO_COMMON_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/tests/common_golden")

  add_test(NAME unit COMMAND rapidproto_tests)

  # Consumer example: exercises rapidproto_generate() end to end -- generate a cross-file schema,
  # compile a TU against it, decode. The in-tree mirror of a downstream find_package/FetchContent user.
  add_subdirectory(examples/consumer)

  # Standalone decode micro-benchmark, kept OUT of the test binary on purpose: measuring decoders
  # inside the large test binary makes results layout-sensitive (see tests/bench_streamgen.cpp).
  # Built at -O3 -DNDEBUG even under the Debug preset so its numbers are meaningful; no -Werror
  # (it is not linked against rapidproto_strict). Run pinned: taskset -c 0 ./rapidproto_bench
  # The bench schema's decoders (arena + streaming, under the `rp` prefix), shared by BOTH benches so
  # they decode the same shapes. Generating it needs only rapidprotoc (no protobuf), so it is emitted
  # unconditionally -- the streaming bench uses rp::bench::stream::Big for the repeated-varint sweep.
  set(BENCH_PROTO "${CMAKE_CURRENT_SOURCE_DIR}/tests/bench/bench.proto")
  set(BENCH_PROTO_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests/bench")
  set(BENCH_GEN "${CMAKE_CURRENT_BINARY_DIR}/generated/bench")
  file(MAKE_DIRECTORY "${BENCH_GEN}")
  # One rapidprotoc invocation emits BOTH decoders under the `rp` prefix, sharing ONE common header
  # (rp::bench): arena at rp::bench::Dataset, streaming at rp::bench::stream::Dataset, both distinct
  # from protoc's bench::Dataset -- all three Dataset types coexist in one translation unit.
  add_custom_command(
    OUTPUT "${BENCH_GEN}/bench.rp.hpp" "${BENCH_GEN}/bench.rp.stream.hpp"
    COMMAND rapidprotoc --arena --stream -I${BENCH_PROTO_DIR} --namespace-prefix=rp
            --out-dir=${BENCH_GEN} ${BENCH_PROTO}
    DEPENDS rapidprotoc ${BENCH_PROTO}
    COMMENT "rapidprotoc --arena --stream bench.proto -> bench.rp.{hpp,stream.hpp}" VERBATIM)

  add_executable(rapidproto_bench tests/bench_streamgen.cpp tests/bench_stream_isolated.cpp
    "${BENCH_GEN}/bench.rp.stream.hpp")
  target_link_libraries(rapidproto_bench PRIVATE rapidproto)
  target_include_directories(rapidproto_bench PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/tests/streamgen_golden "${BENCH_GEN}")
  target_compile_options(rapidproto_bench PRIVATE -O3 -DNDEBUG)

  # Arena benchmark: decode the SAME realistic buffer up to four ways -- the arenagen decoder, protoc +
  # google::protobuf::Arena, the streamgen decoder, and (if <protozero/pbf_reader.hpp> is present)
  # protozero -- comparing parse time + peak memory. Built only when protobuf is available (the
  # apples-to-apples baseline); a normal build doesn't need it.
  # Prefer the protobuf CONFIG package: protobuf 22+ ships one, and its protobuf::libprotobuf target
  # carries the transitive Abseil link deps that the legacy ${Protobuf_LIBRARIES} variable omits. Fall
  # back to CMake's FindProtobuf module for older system installs (e.g. 3.x). To benchmark a specific
  # protobuf version WITHOUT vendoring it, point CMAKE_PREFIX_PATH at that install prefix.
  find_package(Protobuf CONFIG QUIET)
  if(NOT Protobuf_FOUND)
    find_package(Protobuf MODULE QUIET)
  endif()
  if(Protobuf_FOUND)
    # The module sets Protobuf_PROTOC_EXECUTABLE (a path); the config package exposes an imported
    # protobuf::protoc executable instead. Use whichever is available -- and matched to libprotobuf.
    if(NOT Protobuf_PROTOC_EXECUTABLE AND TARGET protobuf::protoc)
      set(Protobuf_PROTOC_EXECUTABLE "$<TARGET_FILE:protobuf::protoc>")
    endif()
    # protoc C++ codegen for the arena bench's materializing baseline (the rapidproto decoders come
    # from the unconditional BENCH_GEN generation above).
    add_custom_command(
      OUTPUT "${BENCH_GEN}/bench.pb.cc" "${BENCH_GEN}/bench.pb.h"
      COMMAND ${Protobuf_PROTOC_EXECUTABLE} --cpp_out=${BENCH_GEN} -I${BENCH_PROTO_DIR} ${BENCH_PROTO}
      DEPENDS ${BENCH_PROTO}
      COMMENT "protoc bench.proto -> bench.pb.{h,cc}" VERBATIM)

    add_executable(rapidproto_arena_bench
      tests/bench_arena.cpp
      "${BENCH_GEN}/bench.pb.cc"
      "${BENCH_GEN}/bench.rp.hpp"
      "${BENCH_GEN}/bench.rp.stream.hpp")
    # protobuf::libprotobuf carries protobuf's include dirs and (on 22+) its Abseil deps transitively.
    target_link_libraries(rapidproto_arena_bench PRIVATE rapidproto protobuf::libprotobuf)
    target_include_directories(rapidproto_arena_bench PRIVATE "${BENCH_GEN}")
    # -O3 for the measured code; protobuf's generated headers trip our strict warnings, so the bench
    # is NOT linked against rapidproto_strict (it is a standalone measurement, like rapidproto_bench).
    target_compile_options(rapidproto_arena_bench PRIVATE -O3 -DNDEBUG)
  endif()
endif()
